# packaging_example

./: README.md  pyproject.toml
src/example_package_mcdebugger/: example.py
