[project]
name = "example_package_mcdebugger"
version = "0.1.0"
description = "A small example package"
authors = [
    {name = "Maksim Kachur", email = "me@maksimkachur.ru"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
