[project]
name = "example_package_mcdebugger"
description = "A small example package"
authors = [
    {name = "Maksim Kachur", email = "me@maksimkachur.ru"},
]
dependencies = []
requires-python = ">=3.11"
dynamic = ["version"]
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
magicalculator = "example_package_mcdebugger.example:main"

[project.urls]
Homepage = "https://github.com/mcdebugger/packaging_example"
Issues = "https://github.com/mcdebugger/packaging_example/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "src/example_package_mcdebugger/__init__.py"
